# segretini-matplottini

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  mypy.ini  plot_utils.py  pyproject.toml  ruff.toml
.github/workflows/: pull_request.yaml  pypi_release.yaml
data/: barplot_data.csv  barplot_data_1.csv  barplot_for_multiple_categories_data.csv  correlation_scatterplot_data.csv  density_data.csv  performance_scaling_data.csv  ridgeplot_data.csv  timeseries_data.csv
data/notebooks/1_getting_started_with_barplots/: barplot_data.csv
data/ridgeplot_data/: autocov.csv  axpy.csv  backprop.csv  backprop2.csv  bfs.csv  convolution.csv  dot_product.csv  gaussian.csv  histogram.csv  hotspot.csv  hotspot3d.csv  lud.csv  mmul.csv  needle.csv  nested.csv  pr.csv
examples/: plot_2d_density.py  plot_barplot.py  plot_binary_classification.py  plot_correlation_scatterplot.py  plot_grid.py  plot_performance_scaling.py  plot_ridgeplot.py  plot_roofline.py  plot_timeseries.py
notebooks/: 1_getting_started_with_barplots.ipynb  plot_bars.py  plot_correlation_scatterplot.py  plot_performance_scaling.py  plot_ridgeplot.py  plot_roofline.py  plot_scratchbook.py  plot_timeseries.py
notebooks/examples/: barplot.py  barplot_2.py  performance_scaling.py  ridgeplot.py
segretini_matplottini/plot/: __init__.py  barplot.py  binary_classification.py  correlation_scatterplot.py  ridgeplot.py  roofline.py  timeseries.py
segretini_matplottini/utils/: __init__.py  colors.py  constants.py  data.py  data_utils.py  legend.py  plot.py  plot_utils.py
src/: main.py  plot_utils.py  scratchbook.py
src/examples/: barplot.py  barplot_2.py  correlation_scatterplot.py  performance_scaling.py  ridgeplot.py  roofline.py
tests/e2e/: test_barplot.py  test_correlation_scatterplot.py  test_ridgeplot.py  test_roofline.py  test_timeseries.py  utils.py
tests/plot/: test_barplot.py  test_binary_classification.py  test_correlation_scatterplot.py  test_ridgeplot.py  test_roofline.py  test_timeseries.py  utils.py
tests/utils/: test_colors.py  test_data.py
