[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
version = "0.2.0"
name = "segretini-matplottini"
description = "Colorful recipes and utilities for Matplolib and Seaborn, to create publication-ready plots"
authors = [{name = "Alberto Parravicini", email = "alberto.parravicini@polimi.it"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.9"
dependencies = [
    "seaborn >= 0.12.0",
    "scipy >= 1.3",
    "statsmodels >= 0.10",
    "scikit-learn >= 1.1.2",
]

[project.optional-dependencies]
dev = [
    "black >= 22.8",
    "isort >= 5",
]

[tool.setuptools]
packages = ["segretini_matplottini"]

[tool.black]
line-length = 119
target-version = ["py39"]