[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
version = "0.3.0"
name = "segretini-matplottini"
description = "Colorful recipes and utilities for Matplolib and Seaborn, to create publication-ready plots"
authors = [{name = "Alberto Parravicini", email = "alberto.parravicini@polimi.it"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.9"
dependencies = [
    "seaborn >= 0.13.0",
    "scipy >= 1.3",
    "statsmodels >= 0.10",
    "scikit-learn >= 1.1.2",
    "jaxtyping >= 0.2.20",
    "matplotlib >= 3.8.0"
]

[project.optional-dependencies]
dev = [
    "black >= 23.7",
    "isort >= 5.12.0",
    "ruff >= 0.0.280",
    "pre-commit >= 3.3.3",
    "pytest >= 7.4.0",
    "mypy >= 1.6.1",
    "build >= 0.10.0",
    "twine >= 4.0.2",
]
notebook = [
    "notebook >= 7.0.1",
]

[tool.setuptools]
packages = ["segretini_matplottini"]

[tool.black]
line-length = 119
target-version = ["py39"]
